tests/ui/traits/default-method/rustc_must_implement_one_of_misuse.stderr
error[E0539]: malformed `rustc_must_implement_one_of` attribute input
  --> $DIR/rustc_must_implement_one_of_misuse.rs:14:1
   |
LL | #[rustc_must_implement_one_of(a)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^
   | |                            |
   | |                            expected 2 or more items
   | help: must be of the form: `#[rustc_must_implement_one_of(function1, function2, ...)]`

error[E0539]: malformed `rustc_must_implement_one_of` attribute input
  --> $DIR/rustc_must_implement_one_of_misuse.rs:20:1
   |
LL | #[rustc_must_implement_one_of]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[rustc_must_implement_one_of(function1, function2, ...)]`

error: `#[rustc_must_implement_one_of]` attribute cannot be used on functions
  --> $DIR/rustc_must_implement_one_of_misuse.rs:38:1
   |
LL | #[rustc_must_implement_one_of(abc, xyz)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_must_implement_one_of]` can only be applied to traits

error: `#[rustc_must_implement_one_of]` attribute cannot be used on structs
  --> $DIR/rustc_must_implement_one_of_misuse.rs:42:1
   |
LL | #[rustc_must_implement_one_of(abc, xyz)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_must_implement_one_of]` can only be applied to traits

error: function not found in this trait
  --> $DIR/rustc_must_implement_one_of_misuse.rs:3:31
   |
LL | #[rustc_must_implement_one_of(a, b)]
   |                               ^

error: function not found in this trait
  --> $DIR/rustc_must_implement_one_of_misuse.rs:3:34
   |
LL | #[rustc_must_implement_one_of(a, b)]
   |                                  ^

error: function not found in this trait
  --> $DIR/rustc_must_implement_one_of_misuse.rs:8:34
   |
LL | #[rustc_must_implement_one_of(a, b)]
   |                                  ^

error: not a function
  --> $DIR/rustc_must_implement_one_of_misuse.rs:26:5
   |
LL |     const A: u8 = 1;
   |     ^^^^^^^^^^^
   |
note: required by this annotation
  --> $DIR/rustc_must_implement_one_of_misuse.rs:24:1
   |
LL | #[rustc_must_implement_one_of(A, B)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: all `#[rustc_must_implement_one_of]` arguments must be associated function names

error: not a function
  --> $DIR/rustc_must_implement_one_of_misuse.rs:28:5
   |
LL |     type B;
   |     ^^^^^^
   |
note: required by this annotation
  --> $DIR/rustc_must_implement_one_of_misuse.rs:24:1
   |
LL | #[rustc_must_implement_one_of(A, B)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: all `#[rustc_must_implement_one_of]` arguments must be associated function names

error: function doesn't have a default implementation
  --> $DIR/rustc_must_implement_one_of_misuse.rs:33:5
   |
LL |     fn a();
   |     ^^^^^^^
   |
note: required by this annotation
  --> $DIR/rustc_must_implement_one_of_misuse.rs:31:1
   |
LL | #[rustc_must_implement_one_of(a, b)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: function doesn't have a default implementation
  --> $DIR/rustc_must_implement_one_of_misuse.rs:35:5
   |
LL |     fn b();
   |     ^^^^^^^
   |
note: required by this annotation
  --> $DIR/rustc_must_implement_one_of_misuse.rs:31:1
   |
LL | #[rustc_must_implement_one_of(a, b)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0539`.
